src/main/resources/static/css/play.css
body {
    margin-bottom: 80px;
}

.btn:hover {
    cursor: pointer;
}

.footer {
    border-top: 1px solid #aaaaaa;
    background-color: white;
}

#assignment-clock .clock {
    position: relative;
    float: left;
}

#assignment-clock .time {
    position: absolute;
}

svg {
    -webkit-transform: rotate(-90deg);
    transform: rotate(-90deg);
}

.circle_animation {
    stroke-dasharray: 440; /* this value is the pixel circumference of the circle */
    stroke-dashoffset: 440;
    transition: all 1s linear;
}

#tabs .nav-link {
    color: black;
}

#tabs .nav-link.editable {
    text-decoration: underline;
}

#tabs .nav-link.success {
    background-color: #28a745;
    color: white;
}

#tabs .nav-link.failure {
    background-color: #dc3545;
    color: white;
}

#tabs .nav-link.partial-success {
    background-color: #dca118;
    color: white;
}

.output-content {
    overflow-y: scroll;
}

button[disabled] {
    pointer-events: none;
}
.inlineBlock {
    display: inline-block;
}
.alignCenter {
    text-align: center;
}
.cursorPointer {
    cursor:pointer;
}
.paddingLeft50 {
    padding-left: 50px;
}
.hide {
    display: none;
}
.cm-header.cm-header-3 {
    font-size: 24px;
}
.cm-header.cm-header-1 {
    font-size: 36px;
}
body .cm-s-default .cm-variable-2 {
    color:black;
    font-style: italic;
}
.cm-s-default .cm-header {
    color:black;
}

.CodeMirror.task {
    font-family: Arial, monospace;
    font-size: 18px;
}

div.file-content {
    overflow-y: scroll;
}

.markdown {
    margin-bottom: 20px;
}

